# rtmlib

./: pyproject.toml
rtmlib/tools/solution/: multiview_pose.py
