[project]
authors = [{ name = "pablovela5620", email = "pablovela5620@gmail.com" }]
dependencies = []
name = "rtmlib"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sam2_depthanything*"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
rtmlib = { path = ".", editable = true }
simplecv = { git = "https://github.com/pablovela5620/simplecv.git", rev = "a279fb50e2e332cbf99fcb885c086b916bb3fd16" }


[tool.pixi.tasks]

[tool.pixi.dependencies]
numpy = "<2"
onnxruntime = ">=1.20.1,<2"
py-opencv = ">=4.11.0,<5"
tqdm = ">=4.67.1,<5"
python = "==3.11"
gradio = "<5"
rerun-sdk = ">=0.22.1,<0.23"
